<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primaryDarkColor"
    android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/info_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme">

                    <TextView
                        android:id="@+id/toolbar_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/toolbar_info"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </android.support.v7.widget.Toolbar>


                <android.support.v7.widget.CardView
                    android:id="@+id/profile_photo_background"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                    <ImageView
                        android:id="@+id/info_main_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/header_background" />


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardBackgroundColor="@color/my_primaryDarkColor">

                    <TextView
                        android:id="@+id/artist_info_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardBackgroundColor="@color/my_primaryDarkColor">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/playcount"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/playcount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/listeners"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/listenerscount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/biography_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/cellText_padding"
                    android:text="@string/biography"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/bioText_padding"
                    android:text="TextView"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/albums_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/cellText_padding"
                    android:text="@string/albums"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <GridView
                    android:id="@+id/top_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:numColumns="3" />

                <TextView
                    android:id="@+id/similar_artists_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/cellText_padding"
                    android:text="@string/similarartists"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <GridView
                    android:id="@+id/similar_artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:numColumns="3" />

            </LinearLayout>
    </ScrollView>

