<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorAccent"
                app:cardBackgroundColor="@color/my_primaryDarkColor"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/username"
                        style="@android:style/Widget.Material.AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:ems="10"
                        android:fontFamily="@font/roboto_condensed_light"
                        android:hint="@string/username_hint"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:singleLine="true"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:typeface="normal" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/my_primaryDarkColor"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/password"
                        style="@android:style/Widget.Material.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:fontFamily="@font/roboto_condensed_light"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:typeface="normal" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:cardBackgroundColor="@color/my_primaryDarkColor"
            app:cardCornerRadius="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/signInBtn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:text="@string/action_sign_in"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/loading"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingTop="75dp"
            android:progressTint="@color/colorPrimaryDark"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>